# give-a-sheet

./: .gitignore  Cargo.toml  LICENSE  README.md  gleam.toml  manifest.toml
.github/workflows/: open-source-starter.yml  rust-ci.yml
give_a_sheet/: Cargo.toml
give_a_sheet/src/: cli.rs  main.rs
libsamplesheet/: Cargo.toml
libsamplesheet/src/: lib.rs  prelude.rs  scrnaseq.rs  viralrecon.rs
nfcore_derive/: Cargo.toml
nfcore_derive/src/: lib.rs
src/: cli.rs  give_a_sheet.gleam  main.rs  pipelines.rs  scrnaseq.rs  utils.rs  viralrecon.rs
