[workspace.package]
description = "Toolkit for generating input samplesheets for a variety of nf-core pipelines."
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/nrminor/give-a-sheet"
homepage = "https://github.com/nrminor/give-a-sheet"
documentation = "https://github.com/nrminor/give-a-sheet/blob/main/README.md"
keywords = ["science", "reproducibility", "bioinformatics", "data"]
categories = ["command-line-utilities", "science"]

[workspace]
members = [
    "nfcore_derive",
    "give_a_sheet",
    "libsamplesheet",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0.203", features = ["serde_derive", "derive", "rc"] }
reqwest = { version = "0.11", features = [
  "rustls-tls",
  "stream",
  "json",
] }

[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
